--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,21 @@
 # Canvas
 
-More information coming soon. This menu will more than likely replace the randimg plugin.
+Canvas is an image display menu.
 
+Currently uploading any image file (.gif, .png, .jpg) inside the `canvas/images/canvas` directory will put them in the running to be displayed on the menu item.
+
+## Settings
+
+You can customize the menu in various ways, first and foremost you can configure the menu item's title on the configuration page. By default it pulls the title from the language file.
+
+On to the settings that matter:
+
+* Image: You can pick between `None`, `Random`, or any single image. Random is selected by default.
+* Size: Entering a Width x Height value here resizes the images. All images on the menu will link to a fullsize image that opens in a new window.
+
+## In The Future
+
+I have plans to allow for the use of a Flickr feed and possibly an Instagram profile as the source of the images. I just thought about this as I typed this up, so no idea how likely it is to happen!
 
 # Translations
 
